[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/Ball/Ball.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Paddle2/Paddle2.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Scene-less Scripts/Paddle2Score.gd" type="Script" id=3]
[ext_resource path="res://Assets/Pong Midline V2.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Scene-less Scripts/Play Button.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Paddle1/Paddle1.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Bottom/Bottom.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Top/Top.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Scene-less Scripts/Paddle1Score.gd" type="Script" id=9]
[ext_resource path="res://Assets/dotgothic16.tres" type="DynamicFont" id=10]
[ext_resource path="res://Scenes/Main Scene/Main.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Scene-less Scripts/Midline.gd" type="Script" id=12]
[ext_resource path="res://Assets/play_button.png" type="Texture" id=13]
[ext_resource path="res://Scenes/Scene-less Scripts/Title Text.gd" type="Script" id=14]

[node name="Main" type="Node"]
script = ExtResource( 11 )

[node name="Paddle1" parent="." instance=ExtResource( 6 )]

[node name="Paddle2" parent="." instance=ExtResource( 2 )]

[node name="Ball" parent="." instance=ExtResource( 1 )]
position = Vector2( 819, 22 )

[node name="Midline" type="Sprite" parent="."]
position = Vector2( 429, 262.5 )
texture = ExtResource( 4 )
script = ExtResource( 12 )

[node name="Bottom" parent="." instance=ExtResource( 7 )]

[node name="Top" parent="." instance=ExtResource( 8 )]

[node name="Paddle1Score" type="RichTextLabel" parent="."]
margin_left = 286.0
margin_top = 15.0
margin_right = 326.0
margin_bottom = 55.0
rect_scale = Vector2( 3, 3 )
custom_fonts/normal_font = ExtResource( 10 )
bbcode_enabled = true
bbcode_text = "[right]2"
text = "2"
script = ExtResource( 9 )

[node name="Paddle2Score" type="RichTextLabel" parent="."]
margin_left = 452.0
margin_top = 15.0
margin_right = 492.0
margin_bottom = 55.0
rect_scale = Vector2( 3, 3 )
custom_fonts/normal_font = ExtResource( 10 )
text = "5"
script = ExtResource( 3 )

[node name="Play Button" type="Button" parent="."]
margin_left = 373.0
margin_top = 256.0
margin_right = 429.0
margin_bottom = 286.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 10 )
text = "Play"
icon = ExtResource( 13 )
icon_align = 2
script = ExtResource( 5 )

[node name="Text" type="RichTextLabel" parent="."]
margin_left = 147.0
margin_top = 140.0
margin_right = 297.0
margin_bottom = 165.0
rect_scale = Vector2( 5, 5 )
custom_fonts/normal_font = ExtResource( 10 )
text = "Player 1 Wins!"
script = ExtResource( 14 )

[connection signal="game_won" from="." to="Paddle1" method="_on_Main_game_won"]
[connection signal="game_won" from="." to="Paddle2" method="_on_Main_game_won"]
[connection signal="game_won" from="." to="Ball" method="_on_Main_game_won"]
[connection signal="game_won" from="." to="Midline" method="_on_Main_game_won"]
[connection signal="game_won" from="." to="Paddle1Score" method="_on_Main_game_won"]
[connection signal="game_won" from="." to="Paddle2Score" method="_on_Main_game_won"]
[connection signal="game_won" from="." to="Text" method="_on_Main_game_won"]
[connection signal="serve_to" from="." to="Ball" method="_on_Main_serve_to"]
[connection signal="start_game" from="." to="Paddle1" method="_on_Main_start_game"]
[connection signal="start_game" from="." to="Paddle2" method="_on_Main_start_game"]
[connection signal="start_game" from="." to="Ball" method="_on_Main_start_game"]
[connection signal="start_game" from="." to="Midline" method="_on_Main_start_game"]
[connection signal="start_game" from="." to="Paddle1Score" method="_on_Main_start_game"]
[connection signal="start_game" from="." to="Paddle2Score" method="_on_Main_start_game"]
[connection signal="start_game" from="." to="Play Button" method="_on_Main_start_game"]
[connection signal="start_game" from="." to="Text" method="_on_Main_start_game"]
[connection signal="point" from="Ball" to="." method="_on_Ball_point"]
[connection signal="pressed" from="Play Button" to="." method="_on_Play_Button_pressed"]
